Address PR feedback

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,23 @@
 .filterSelect select {
     margin: 4px;
 }
+
+.backButton {
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.footer {
+    margin: 6px;
+}
+
+/* For Firefox */
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+/* Webkit browsers like Safari and Chrome */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
